--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://www.gstatic.com/firebasejs/5.7.3/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.7.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.7.3/firebase-firestore.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
@@ -25,7 +26,7 @@
                         <div class="col-sm-2">Destination</div>
                         <div class="col-sm-2">Frequency (Min)</div>
                         <div class="col-sm-2">Next Arrival</div>
-                        <div class="col-sm-2">Minutes Away</div>
+                        <div class="col-sm-2">Arrives In</div>
                         <div class="col-sm-2">Actions</div>
                     </div>
                 </div>
