--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.7.3/firebase-firestore.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Train Scheduler</title>
 </head>
 
 <body>
