--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
             <div class="trains">
                 <h4 class="text-center">CURRENT TRAIN SCHEDULE</h4>
                 <div class="train-content text-center">
-                    <div class="row header-row">
+                    <!-- <div class="row header-row">
                         <div class="col-sm-2">Train Name</div>
                         <div class="col-sm-2">Destination</div>
                         <div class="col-sm-2">Frequency (Min)</div>
                         <div class="col-sm-2">Next Arrival</div>
                         <div class="col-sm-2">Arrives In</div>
                         <div class="col-sm-2">Actions</div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
